--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </ul>
                 <ul>
                     <li>
-                        <a href="#contato">Contato</a>
+                        <a href="#contact">Contato</a>
                     </li>
                 </ul>
             </nav> 
